code highlight tests

--- a/docs/_posts/2018-01-3-file-io.md
+++ b/docs/_posts/2018-01-3-file-io.md
@@ -5,7 +5,7 @@ date:   2018-01-03 08:02:01 -0600
 tags: pvj
 ---
 
-##Python
+## Python
 
 {% highlight python %}
 f = open('helloworld.txt','w')
@@ -14,7 +14,8 @@ f = open('helloworld.txt','w')
 f.close()
 {% endhighlight %}
 
-##Javascript
+## Javascript
+
 {% highlight javascript %}
 const fs = require('fs')
 
@@ -30,3 +31,19 @@ fs.writeFile('helloworld.txt', file_content, (err) => {
     console.log('File written!');
 });
 {% endhighlight %}
+
+```javascript
+const fs = require('fs')
+
+let file_content = ""
+file_content += 'line one\n'
+file_content += ''line two\n'
+
+fs.writeFile('helloworld.txt', file_content, (err) => {
+    // throws an error, you could also catch it here
+    if (err) throw err;
+
+    // success case, the file was saved
+    console.log('File written!');
+});
+```
